--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       font-family: 'Times New Roman', Times, serif;
       margin: 0;
       padding: 0;
-      background: url('https://raw.githubusercontent.com/Kea-Tan/StRicaT/refs/heads/main/background.jpg') no-repeat center center fixed; /* Fixed URL */
+      background: url('https://raw.githubusercontent.com/Kea-Tan/StRicaT/refs/heads/main/RicaT..jpg') no-repeat center center fixed; /* Fixed URL */
       background-size: cover; /* Ensures the background covers the entire screen */
       display: flex;
       justify-content: center;
